# hello-rs

./: .Makefile.kate-swp  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
scripts/: linker.ld
src/: main.rs
