[package]
name = "binary"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.60.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }

[profile.release]
debug = false
strip = "symbols"
opt-level = "z"
panic = "abort"
incremental = false
lto = true
codegen-units = 1
overflow-checks = false
debug-assertions = false
rpath = false

# Additional size reduction for all dependencies
[profile.release.package."*"]
opt-level = "z"
strip = "symbols"
codegen-units = 1

# Build configuration
[build]
rustflags = [
    "-Z", "location-detail=none",
    "-C", "link-arg=-s",
    "-C", "link-arg=-Wl,--gc-sections",
    "-C", "link-arg=-Wl,--strip-all",
    "-C", "target-feature=+crt-static",
    "-C", "prefer-dynamic=false",
    "-C", "embed-bitcode=false",
    "-C", "debuginfo=0",
    "-C", "symbol-mangling-version=v0",
    "-Z", "share-generics=off",
    "-Z", "threads=1",
    "-Z", "unstable-options",
    # Windows specific
    "-C", "link-arg=/SUBSYSTEM:CONSOLE",
    "-C", "link-arg=/MERGE:.rdata=.text"
]

# Standard library rebuild for maximum optimization
build-std = ["core", "alloc", "std", "panic_abort"]
build-std-features = ["panic_immediate_abort"]