[package]
name = "hello"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
windows = { version = "0.60.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }

[profile.release]
codegen-units = 1                           # reduces binary size by ~2%
lto = true                                  # reduces binary size by ~14%
opt-level = "z"                             # reduces binary size by ~25%
panic = "abort"                             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
debug = "none"                              # disable debug information
split-debuginfo = "packed"                  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"                           # see split-debuginfo - allows us to drop the size by ~65%
incremental = false                         # no need to improve re-compile times
overflow-checks = false                     # disable integer overflow checks.
debug-assertions = false                    # dont enable extra debugging code
rpath = false                               # dont encode the path to shared libraries into the header
